plugins {
    id 'java'
}

subprojects {
    plugins.withType(JavaPlugin) {
        // At this point, the JavaPluginExtension definitely exists
        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(21)
            }
        }
    }
}


subprojects {
    apply plugin: 'java'

    gradle.projectsEvaluated {
        tasks.withType(JavaCompile).tap {
            configureEach {
                options.compilerArgs << "-Werror"
            }
        }
    }

    repositories {
        mavenCentral()
        gradlePluginPortal()
    }

    dependencies {
        implementation          'javax.annotation:javax.annotation-api:1.3.2'
        implementation          'org.apache.logging.log4j:log4j-api:2.20.0'
        implementation          'org.apache.logging.log4j:log4j-core:2.20.0'
        runtimeOnly             'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
        implementation          'org.apache.commons:commons-lang3:3.12.0'
        compileOnly             'org.projectlombok:lombok:1.18.34'
        testCompileOnly         'org.projectlombok:lombok:1.18.34'
        annotationProcessor     'org.projectlombok:lombok:1.18.34'
        testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
    }

    test {
        useTestNG()
        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
    }

    configurations {
        configureEach {
            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        }
    }
}